
CMSContentManager - 1.2
  - Gets rid of secure options, flag output and bulk functionaltiy
  - modified to use CMS_ROOT_URL
  - Change connection timeout to 1 second.
  - Change processing to be a little more friendly to some environments wrt. content-size header.
  - Adds expand/functionality into reorder content (TODO: needs styling)

Installation Assistant - v1.3.5
  - Now require at least version 2.0.1 to upgrade
  - Now test the default character set
  - Now require at least PHP 7.0 and recommend 7.1

ModuleManaver v2.2
  - XML import code now lives here.
  - XML export code now lives here.

FileManager v1.6.4
  - modified to use CMS_ROOT_URL
  - Add a different icon for navigating up one level.
  - No longer allow uploading any php (or derivative) file.
  - No longer allow renaming any file to have a .php extension (or a derivative).
  - Now use CMSMS error console when displaying filepicker exceptions (no uncaught exceptions)

FilePicker v1.0.1
  - No longer allow overriding the filepicker type on the URL.
  - No longer allow uploading any .php files.

AdminLog
  - New core module to replace the adminlog.php file

Search  - remember to bump version
 - Now exports a command for cmscli

AdminSearch v1.0.5
 - Rationalize the code a bit (remove un-necessary files).

DesignManager v1.1.6
 - Now properly handle renaming exported stylesheets and templates.

Navigator v1.0.9
 - Adds the title property to each node.

Version 2.2.6 - NO NAME SET
----------------------------------
Core - General
  - Fixes to AdminAlerts::load_by_name()

Search
  - Fix notice in PHP 7.1: A non well formed numeric value encountered...


Version 2.2.5 - Wawa
----------------------------------
Core - General
  - Fix minor security issue in the way login information was cached in cookies and the session.
  - Simplify rules around alias editing/generation in fillparams. 
    If the alias field exists then we can adjust its value or recalculate an alias.